--- a/src/template.html
+++ b/src/template.html
@@ -7,6 +7,7 @@
 		<meta name="mobile-web-app-capable" content="yes">
 		<meta name="apple-mobile-web-app-capable" content="yes">
 		<link rel="apple-touch-icon" href="/assets/icons/apple-touch-icon.png">
+    <meta name="theme-color" content="#673ab8">
 		<% preact.headEnd %>
 	</head>
 	<body>
